--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -13,7 +13,7 @@
         width: 70%;
         .sectionInner {
             --pixels: -30px;
-            animation: fadeInY 0.8s ease-out;
+            animation: fadeInY 1s ease-out;
             .title {
                 color: var(--text-turq-highlight);
                 font-size: 2em;
@@ -43,7 +43,8 @@
                 transition: all 0.25s;
                 border-radius: 16px;
                 position: relative;
-                height: 300px;
+                height: 250px;
+                width: 300px;
                 padding: 6px;
                 right: 0;
             }
@@ -63,6 +64,7 @@
                 position: relative;
                 padding: 6px;
                 width: 100px;
+                height: 100px;
                 right: 0;
             }
             .pictureSmall:hover {
@@ -117,6 +119,7 @@
         justify-content: flex-start;
         width: 100%;
         height: 100%;
+        min-height: 400px;
     }
 }
 
