--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,16 @@
   font-style: oblique 0deg 20deg;
   font-stretch: 75% 125%;
   font-weight: 100 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto Mono';
+  src: url('/RobotoMono-Italic-VariableFont_wght.ttf') format('truetype');
+  font-style: oblique 0deg 20deg;
+  font-stretch: 75% 125%;
+  font-weight: 100 700;
+  font-style: italic;
 }
 
 * {
