--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -9,6 +9,7 @@
         align-items: flex-start;
         justify-content: flex-start;
         margin-bottom: 200px;
+        max-width: 1000px;
         min-height: 70vh;
         width: 70%;
         .sectionInner {
@@ -81,8 +82,10 @@
             }    
             .worked {
                 display: flex;
-                flex-direction: column;
+                flex-direction: column;                
                 justify-content: flex-start;
+                margin: auto;
+                width: 80%;
                 .listItem {
                     color: var(--text-turq-normal);
                     list-style-type: disc;
@@ -90,6 +93,14 @@
                     font-weight: 600;
                     font-size: 1em;
                     margin: 3px;
+                }
+                .subtitle {
+                    margin: 12px 0px;
+                }
+                .companyCol {
+                    display: flex;
+                    flex-direction: column;
+                    max-height: 120px;
                 }
             }
         }
@@ -101,9 +112,10 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    width: 70%;
-    min-height: 100vh;
     margin-bottom: 100px;
+    min-height: 100vh;
+    max-width: 1000px;
+    width: 70%;
     .hero {
         display: flex;
         flex-direction: row;
@@ -188,17 +200,24 @@
 }
 .subHeader {
     --pixels: -30px;
+    font-style: italic;
+    font-synthesis: none;
+    font-variation-settings: "wght" 300;
+    animation: fadeInY 0.8s ease-out;
     color: var(--text-turq-normal);
     margin: 6px 0px 30px 0px;
     font-size: 30px;
-    font-variation-settings: "wght" 300;
-    animation: fadeInY 0.8s ease-out;
 }
 .paragraph {
     --pixels: -40px;
     font-size: 24px;
     color: var(--text-turq-semi);
     animation: fadeInY 0.8s ease-out;
+}
+.highlighted {
+    font-variation-settings: "wght" 300;
+    color: var(--text-turq-semi);
+    margin: 6px 0px 30px 0px;
 }
 
 .hidden {
